[package]
name = "ftp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23.20"
rustls-native-certs = "0.8.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.1"
rustls-pemfile = "2.2.0"
regex = "1.11.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.22"
env_logger = "0.11.6"